test/fail/init_arr_no_size.min
program
    array a := 1, 2
start
end
